fix SearchForm box shadow not appearing on ios

--- a/src/features/search/components/SearchForm/SearchForm.module.css
+++ b/src/features/search/components/SearchForm/SearchForm.module.css
@@ -6,6 +6,7 @@
 }
 .searchForm input {
   -webkit-appearance: none;
+  background: transparent;
   color: var(--googleBlack);
   padding: 10px 12px;
   padding-left: 60px;
